Patch/458 misc bugs (#366)
* Fixed followers overlap author's name

* Add path to favourite only for student

* Fixed chat's height broken because of wrapping it inside of a div

* Fixed lecture thumbnail paths on favs page

* Thumbnails on lectures page in favs are stretched

--- a/frontend/src/screens/Favourites/components/lectures/styles.module.sass
+++ b/frontend/src/screens/Favourites/components/lectures/styles.module.sass
@@ -10,7 +10,7 @@
   width: 100%
   grid-template-rows: repeat(auto-fill, 80px)
   grid-row-gap: .3em
-  
+
 .row
   display: flex
   justify-content: space-between
@@ -119,6 +119,7 @@
   max-width: 100%
   min-height: 76px
   max-height: 76px
+  object-fit: cover
 
 .no_video
   color: #FFFFFF
