--- a/frontend/src/screens/PathPage/components/AuthorCard/styles.module.sass
+++ b/frontend/src/screens/PathPage/components/AuthorCard/styles.module.sass
@@ -30,6 +30,7 @@ $image_size: 6rem
   font-size: 1.3em
   grid-column: 2
   grid-row: 1
+  line-height: 120%
 
 .biography
   align-self: flex-start
@@ -41,6 +42,9 @@ $image_size: 6rem
   grid-column: 2
   grid-row: 2
   padding-left: 0.1em
+
+.biography_text
+  padding-top: 0.3em
 
 .followers
   color: #aaa
